most base classes extend a logging class